force-app/main/default/objects/DocumentCategory__c/DocumentCategory__c.object-meta.xml
<CustomObject>
    <label>Document Category</label>
    <nameField>
        <label>Document Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>