force-app/main/default/objects/DocumentCategory__c/fields/ParentDirectoryName__c.field-meta.xml
<CustomField>
    <fullName>ParentDirectoryName__c</fullName>
    <label>Directorio padre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>