force-app/main/default/objects/DocumentCategory__c/fields/ParentDocumentCategory__c.field-meta.xml
<CustomField>
    <fullName>ParentDocumentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Document Category</label>
    <referenceTo>DocumentCategory__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>DocumentSubcategories</relationshipName>
    <type>Lookup</type>
</CustomField>