force-app/main/default/objects/DocumentCategory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Level__c</columns>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>ParentDocumentCategory__c</columns>
    <columns>ParentDirectoryName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>